--- a/src/ICanPay.Tenpay/ICanPay.Tenpay.csproj
+++ b/src/ICanPay.Tenpay/ICanPay.Tenpay.csproj
@@ -14,6 +14,7 @@
     <DebugType>none</DebugType>
     <DebugSymbols>false</DebugSymbols>
     <DocumentationFile>bin\Release\netstandard2.0\ICanPay.Tenpay.xml</DocumentationFile>
+    <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
