--- a/document/微信支付(WeChatPayment)/WxPayAPI/WxPayAPI/Web.config
+++ b/document/微信支付(WeChatPayment)/WxPayAPI/WxPayAPI/Web.config
@@ -7,11 +7,19 @@
   </system.net>-->
   <appSettings/>
   <connectionStrings/>
+  <!--
+    有关 web.config 更改的说明，请参见 http://go.microsoft.com/fwlink/?LinkId=235367。
+
+    可在 <httpRuntime> 标记上设置以下特性。
+      <system.Web>
+        <httpRuntime targetFramework="4.6.1" />
+      </system.Web>
+  -->
   <system.web>
-    <pages buffer="true" enableViewStateMac="false" validateRequest="false"/>
+    <pages buffer="true" enableViewStateMac="false" validateRequest="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
     <!--<customErrors mode="Off"/>-->
     <!--<compilation debug="true"/>-->
-    <compilation debug="false"/>
+    <compilation debug="true" targetFramework="4.6.1"/>
     <!--
             通过 <authentication> 节，可配置 
       ASP.NET 用于识别进入用户的 
