--- a/test/ICanPay.UnitTest/ICanPay.UnitTest.csproj
+++ b/test/ICanPay.UnitTest/ICanPay.UnitTest.csproj
@@ -7,16 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.1.18" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.1.18" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
+    <PackageReference Include="xunit" Version="2.3.0" />
+    <PackageReference Include="xunit.runner.console" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\ICanPay.Alipay\ICanPay.Alipay.csproj" />
-    <ProjectReference Include="..\..\src\ICanPay.Tenpay\ICanPay.Tenpay.csproj" />
     <ProjectReference Include="..\..\src\ICanPay.Wechatpay\ICanPay.Wechatpay.csproj" />
-    <ProjectReference Include="..\..\src\ICanPay.Yeepay\ICanPay.Yeepay.csproj" />
   </ItemGroup>
 
 </Project>
