--- a/src/ICanPay.Alipay/ICanPay.Alipay.csproj
+++ b/src/ICanPay.Alipay/ICanPay.Alipay.csproj
@@ -8,13 +8,19 @@
     <Authors>Varorbc</Authors>
     <Description>支付宝支付</Description>
     <Version>1.0.7</Version>
+    <PackageTags>dotnetcore;pay;alipay;</PackageTags>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/Varorbc/ICanPay</RepositoryUrl>
+    <PackageLicenseUrl>https://github.com/Varorbc/ICanPay/blob/master/LICENSE</PackageLicenseUrl>
+    <Copyright>Varorbc</Copyright>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DebugType>none</DebugType>
     <DebugSymbols>false</DebugSymbols>
-    <DocumentationFile>bin\Release\netstandard2.0\ICanPay.Alipay.xml</DocumentationFile>
+    <DocumentationFile>..\..\output\release\netstandard2.0\ICanPay.Alipay.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
+    <OutputPath>..\..\output\release\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
