--- a/sample/ICanPay.Demo/ICanPay.Demo.csproj
+++ b/sample/ICanPay.Demo/ICanPay.Demo.csproj
@@ -14,10 +14,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\ICanPay.Alipay\ICanPay.Alipay.csproj" />
+    <ProjectReference Include="..\..\src\ICanPay.Unionpay\ICanPay.Unionpay.csproj" />
     <ProjectReference Include="..\..\src\ICanPay.Wechatpay\ICanPay.Wechatpay.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Certs\acp_test_sign.pfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Certs\apiclient_cert.p12">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
