添加测试文件

--- a/test/ICanPay.UnitTest/ICanPay.UnitTest.csproj
+++ b/test/ICanPay.UnitTest/ICanPay.UnitTest.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\..\src\ICanPay.Wechatpay\ICanPay.Wechatpay.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="acp_test_sign.pfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
