--- a/src/ICanPay.Unionpay/ICanPay.Unionpay.csproj
+++ b/src/ICanPay.Unionpay/ICanPay.Unionpay.csproj
@@ -7,7 +7,7 @@
     <Title>ICanPay.Unionpay</Title>
     <Authors>Varorbc</Authors>
     <Description>银联支付</Description>
-    <Version>1.1.3</Version>
+    <Version>1.1.4</Version>
     <PackageTags>dotnetcore;pay;unionpay;</PackageTags>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Varorbc/ICanPay</RepositoryUrl>
@@ -19,7 +19,7 @@
     <DebugType>none</DebugType>
     <DebugSymbols>false</DebugSymbols>
     <DocumentationFile>..\..\output\release\netstandard2.0\ICanPay.Unionpay.xml</DocumentationFile>
-    <NoWarn>1701;1702;1705;1591</NoWarn>
+    <NoWarn>1701;1702;1705;1591;1570</NoWarn>
     <OutputPath>..\..\output\release\</OutputPath>
   </PropertyGroup>
 
