--- a/sample/ICanPay.Demo(Net)/packages.config
+++ b/sample/ICanPay.Demo(Net)/packages.config
@@ -21,4 +21,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.4.0" targetFramework="net461" />
+  <package id="System.Drawing.Common" version="4.5.0-preview1-25914-04" targetFramework="net461" />
 </packages>
