--- a/src/ICanPay.Core/ICanPay.Core.csproj
+++ b/src/ICanPay.Core/ICanPay.Core.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.0" />
+    <PackageReference Include="System.Drawing.Common" Version="4.5.0-preview1-25914-04" />
     <PackageReference Include="ZXing.Net" Version="0.16.2" />
   </ItemGroup>
 
