--- a/test/ICanPay.UnitTest(Net)/packages.config
+++ b/test/ICanPay.UnitTest(Net)/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net461" />
+  <package id="System.Drawing.Common" version="4.5.0-preview1-25914-04" targetFramework="net461" />
 </packages>
