修复.net平台下死锁问题

--- a/document/支付宝(Alipay)/alipay.trade.pay-DoNet-UTF-8/alipay.trade.pay-DoNet-UTF-8.csproj
+++ b/document/支付宝(Alipay)/alipay.trade.pay-DoNet-UTF-8/alipay.trade.pay-DoNet-UTF-8.csproj
@@ -32,6 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -188,7 +189,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>5451</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:5451/</IISUrl>
+          <IISUrl>http://localhost:5453/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
