--- a/src/ICanPay.Unionpay/ICanPay.Unionpay.csproj
+++ b/src/ICanPay.Unionpay/ICanPay.Unionpay.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
     <PackageReference Include="SharpZipLib" Version="0.86.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.4.0" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
