添加微信公众号支付

--- a/sample/ICanPay.Demo/ICanPay.Demo.csproj
+++ b/sample/ICanPay.Demo/ICanPay.Demo.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\ICanPay.Alipay\ICanPay.Alipay.csproj" />
+    <ProjectReference Include="..\..\src\ICanPay.Wechatpay\ICanPay.Wechatpay.csproj" />
   </ItemGroup>
 
 </Project>
