添加微信转账到银行卡功能

--- a/sample/ICanPay.Demo/appsettings.json
+++ b/sample/ICanPay.Demo/appsettings.json
@@ -20,6 +20,7 @@
       "MchId": "1233410002",
       "Key": "e10adc3849ba56abbe56e056f20f883e",
       "AppSecret": "51c56b886b5be869567dd389b3e5d1d6",
+      "PublicKey": "",
       "SslCertPath": "Certs/apiclient_cert.p12",
       "SslCertPassword": "1233410002",
       "NotifyUrl": "http://localhost:61377/Notify"
