--- a/src/ICanPay.Wechatpay/ICanPay.Wechatpay.csproj
+++ b/src/ICanPay.Wechatpay/ICanPay.Wechatpay.csproj
@@ -26,6 +26,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Portable.BouncyCastle" Version="1.8.1.3" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <ProjectReference Include="..\ICanPay.Core\ICanPay.Core.csproj" />
   </ItemGroup>
 
