--- a/src/ICanPay.Alipay/ICanPay.Alipay.csproj
+++ b/src/ICanPay.Alipay/ICanPay.Alipay.csproj
@@ -25,6 +25,10 @@
     <OutputPath>..\..\output\release\</OutputPath>
   </PropertyGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.0.0" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\ICanPay.Core\ICanPay.Core.csproj" />
   </ItemGroup>
