--- a/src/ICanPay.Wechatpay/ICanPay.Wechatpay.csproj
+++ b/src/ICanPay.Wechatpay/ICanPay.Wechatpay.csproj
@@ -28,6 +28,10 @@
   <ItemGroup>
     <PackageReference Include="Portable.BouncyCastle" Version="1.8.1.3" />
   </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.0.0" />
+  </ItemGroup>
   
   <ItemGroup>
     <ProjectReference Include="..\ICanPay.Core\ICanPay.Core.csproj" />
