--- a/sample/PaySharp.Demo/PaySharp.Demo.csproj
+++ b/sample/PaySharp.Demo/PaySharp.Demo.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\PaySharp.Alipay\PaySharp.Alipay.csproj" />
+    <ProjectReference Include="..\..\src\PaySharp.Unionpay\PaySharp.Unionpay.csproj" />
     <ProjectReference Include="..\..\src\PaySharp.Wechatpay\PaySharp.Wechatpay.csproj" />
   </ItemGroup>
 
