添加扫码支付

--- a/sample/PaySharp.Demo/appsettings.json
+++ b/sample/PaySharp.Demo/appsettings.json
@@ -32,7 +32,7 @@
       "CertPwd": "000000",
       "CertPath": "Certs/acp_test_sign.pfx",
       "NotifyUrl": "http://localhost:61377/Notify",
-      "FrontUrl": "http://localhost:61377/Notify"
+      "ReturnUrl": "http://localhost:61377/Notify"
     }
   ]
 }
