--- a/src/PaySharp.Wechatpay/PaySharp.Wechatpay.csproj
+++ b/src/PaySharp.Wechatpay/PaySharp.Wechatpay.csproj
@@ -1,41 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="../../packaging.props" />
+
   <PropertyGroup>
     <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageProjectUrl>https://github.com/Varorbc/PaySharp</PackageProjectUrl>
     <Title>PaySharp.Wechatpay</Title>
-    <Authors>Varorbc</Authors>
     <Description>微信支付</Description>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <PackageTags>dotnetcore;pay;wechatpay;</PackageTags>
-    <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/Varorbc/PaySharp</RepositoryUrl>
-    <PackageLicenseUrl>https://github.com/Varorbc/PaySharp/blob/master/LICENSE</PackageLicenseUrl>
-    <Copyright>Varorbc</Copyright>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>PaySharp.snk</AssemblyOriginatorKeyFile>
-    <PackageIconUrl>https://github.com/Varorbc/PaySharp/raw/master/logo.png</PackageIconUrl>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DebugType>none</DebugType>
-    <DebugSymbols>false</DebugSymbols>
-    <DocumentationFile>..\..\output\release\netstandard2.0\PaySharp.Wechatpay.xml</DocumentationFile>
-    <NoWarn>1701;1702;1705;1591</NoWarn>
-    <OutputPath>..\..\output\release\</OutputPath>
+    <PackageReleaseNotes>
+      1.Net环境添加通过配置文件注册方式
+      2.修改Core下配置方式
+      3.增加OAuth请求
+    </PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Portable.BouncyCastle" Version="1.8.1.3" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.0.0" />
-  </ItemGroup>
+  <Import Project="../../output.props" />
 
-  <ItemGroup>
-    <ProjectReference Include="..\PaySharp.Core\PaySharp.Core.csproj" />
-  </ItemGroup>
+  <Import Project="../../dependencies.props" />
 
 </Project>
