--- a/sample/PaySharp.Demo(Net)/Web.config
+++ b/sample/PaySharp.Demo(Net)/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <configSections>
     <sectionGroup name="paySharp">
-      <section name="alipays" type="PaySharp.Core.ConfigurationHandler"/>
+      <section name="alipays" type="PaySharp.Core.ConfigurationHandler" />
     </sectionGroup>
   </configSections>
   <paySharp>
@@ -64,11 +64,15 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.5.0" newVersion="5.2.5.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.8.1.0" newVersion="4.8.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
