--- a/src/PaySharp.Alipay/PaySharp.Alipay.csproj
+++ b/src/PaySharp.Alipay/PaySharp.Alipay.csproj
@@ -6,10 +6,10 @@
     <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
     <Title>PaySharp.Alipay</Title>
     <Description>支付宝支付</Description>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
     <PackageTags>dotnetcore;pay;alipay;</PackageTags>
     <PackageReleaseNotes>
-      增加退款异步通知
+      优化回调通知中支付成功的判断
     </PackageReleaseNotes>
   </PropertyGroup>
 
