--- a/dependencies.props
+++ b/dependencies.props
@@ -3,8 +3,8 @@
     <Reference Include="System.Configuration" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.0.0" />
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
