--- a/sample/PaySharp.Demo/appsettings.json
+++ b/sample/PaySharp.Demo/appsettings.json
@@ -1,8 +1,9 @@
 ﻿{
   "Logging": {
-    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*",
