--- a/src/PaySharp.Alipay/PaySharp.Alipay.csproj
+++ b/src/PaySharp.Alipay/PaySharp.Alipay.csproj
@@ -8,7 +8,7 @@
     <Description>支付宝支付</Description>
     <PackageTags>dotnetcore;pay;alipay;</PackageTags>
     <PackageReleaseNotes>
-      更新至3.0
+      支持.net core3.0
     </PackageReleaseNotes>
   </PropertyGroup>
 
