--- a/src/PaySharp.Wechatpay/PaySharp.Wechatpay.csproj
+++ b/src/PaySharp.Wechatpay/PaySharp.Wechatpay.csproj
@@ -8,7 +8,7 @@
     <Description>微信支付</Description>
     <PackageTags>dotnetcore;pay;wechatpay;</PackageTags>
     <PackageReleaseNotes>
-      更新至3.0
+      支持.net core3.0
     </PackageReleaseNotes>
   </PropertyGroup>
 
