添加银联商务网关

--- a/test/PaySharp.UnitTest/PaySharp.UnitTest.csproj
+++ b/test/PaySharp.UnitTest/PaySharp.UnitTest.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\PaySharp.Alipay\PaySharp.Alipay.csproj" />
     <ProjectReference Include="..\..\src\PaySharp.Allinpay\PaySharp.Allinpay.csproj" />
+    <ProjectReference Include="..\..\src\PaySharp.Netpay\PaySharp.Netpay.csproj" />
     <ProjectReference Include="..\..\src\PaySharp.Unionpay\PaySharp.Unionpay.csproj" />
     <ProjectReference Include="..\..\src\PaySharp.Wechatpay\PaySharp.Wechatpay.csproj" />
   </ItemGroup>
