--- a/sample/PaySharp.Demo(Net)/PaySharp.Demo(Net).csproj
+++ b/sample/PaySharp.Demo(Net)/PaySharp.Demo(Net).csproj
@@ -60,6 +60,12 @@
     <PackageReference Include="Microsoft.AspNet.WebPages.zh-Hans" Version="3.2.7" />
     <PackageReference Include="Microsoft.Web.Infrastructure" Version="1.0.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Serilog.Sinks.File">
+      <Version>4.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="SerilogWeb.Classic.WebApi">
+      <Version>4.0.5</Version>
+    </PackageReference>
     <PackageReference Include="WebGrease" Version="1.6.0" />
   </ItemGroup>
   <ItemGroup>
