--- a/sample/PaySharp.Demo(Net)/Web.config
+++ b/sample/PaySharp.Demo(Net)/Web.config
@@ -74,6 +74,10 @@
         <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http.WebHost" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.webServer>
