--- a/src/PaySharp.Allinpay/PaySharp.Allinpay.csproj
+++ b/src/PaySharp.Allinpay/PaySharp.Allinpay.csproj
@@ -3,7 +3,7 @@
   <Import Project="../../package.props" />
 
   <PropertyGroup>
-    <TargetFrameworks>net45;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net45;netcoreapp3.1;net5.0</TargetFrameworks>
     <Title>PaySharp.Allinpay</Title>
     <Description>通联收银宝</Description>
     <PackageTags>dotnetcore;pay;Allinpay;</PackageTags>
