--- a/src/PaySharp.Wechatpay/PaySharp.Wechatpay.csproj
+++ b/src/PaySharp.Wechatpay/PaySharp.Wechatpay.csproj
@@ -3,7 +3,7 @@
   <Import Project="../../package.props" />
 
   <PropertyGroup>
-    <TargetFrameworks>net45;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net45;netcoreapp3.1;net5.0</TargetFrameworks>
     <Title>PaySharp.Wechatpay</Title>
     <Description>微信支付</Description>
     <PackageTags>dotnetcore;pay;wechatpay;</PackageTags>
